# LCA_4_noitatuM_EWS

./: .gitignore  DEPENDENCIES.md  README.md  acl.tex  pyproject.toml  swehack_injector_refactored.yaml
data/: curated_mutations.jsonl  curated_mutations.jsonl.bak  curated_mutations.jsonl.bak2
data/analysis/: astropy__astropy-12907.md  astropy__astropy-13033.md  astropy__astropy-13236.md  astropy__astropy-13398.md  astropy__astropy-13453.md  astropy__astropy-13579.md  astropy__astropy-13977.md  astropy__astropy-14096.md  astropy__astropy-14182.md  astropy__astropy-14309.md  astropy__astropy-14365.md  astropy__astropy-14369.md  astropy__astropy-14508.md  astropy__astropy-14539.md  astropy__astropy-14598.md  astropy__astropy-14995.md  astropy__astropy-7166.md  astropy__astropy-7336.md  astropy__astropy-7606.md  astropy__astropy-7671.md  astropy__astropy-8707.md  astropy__astropy-8872.md  django__django-10097.md  django__django-10554.md  django__django-10880.md  django__django-10914.md  django__django-10973.md  django__django-10999.md  django__django-11066.md  django__django-11087.md  django__django-11095.md  django__django-11099.md  django__django-11119.md  django__django-11133.md  django__django-11138.md  django__django-11141.md  django__django-11149.md  django__django-11163.md  django__django-11179.md  django__django-11206.md  (+241 more)
examples/input/: sample.py
scripts/: eval.py  mutation.py  testgen.py
src/swe_mutation/: __init__.py  cli.py  pipeline.py  utils.py
tests/: test_mutations.py
